<resources>
    <string name="app_name">BuyNow</string>
    <string name="hint_sdt">Số điện thoại</string>
    <string name="hint_password">Password</string>
    <string name="buttontieptuc">Tiếp tục</string>
    <string name="buttondongy">Đồng ý</string>
    <string name="hint_maxachan">Nhập mã xác nhận</string>
    <string name="textViewDangSanPham">Đăng sản phẩm</string>
    <string name="textViewSuaSanPham">Sửa sản phẩm</string>
    <string name="btnBoLoc">Bỏ lọc</string>
    <string name="TextViewTenSanPham">Tên sản phẩm:</string>
    <string name="TextViewGia">Giá:</string>
    <string name="TextViewTinhTrang">Tình trạng:</string>
    <string name="ButtonDang">Đăng</string>
    <string name="ButtonSua">Sửa</string>
    <string name="ButtonXemLai">Xem lại</string>
    <string name="TextViewMoTaSanPham">Mô tả sản phẩm</string>
    <string name="SwitchCon">Còn</string>
    <string name="SwitchHet">Hết</string>
    <string-array name="SpinnerLoai">
        <item>Máy tính</item>
        <item>Điện thoại</item>
        <item>Tablet</item>
        <item>Tivi</item>
    </string-array>
    <string-array name="SpinnerKhuVuc">
        <item>Toàn quốc</item>
        <item>Tp Hồ Chí Minh</item>
        <item>Hà Nội</item>
        <item>Đà Nẵng</item>
        <item>Cần Thơ</item>
        <item>Bình Dương</item>
        <item>An Giang</item>
        <item>Bà Rịa- Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Cạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hòa Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên – Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>


    </string-array>


    <string name="gia">Giá:</string>
    <string name="sanpham">Sản phẩm:</string>
    <string name="ten">Xperia XZ1</string>
    <string name="tien">6,300,000</string>
    <string name="username">Ngô Quốc Cường</string>
    <string name="danhmuc">Danh mục:</string>
    <string name="tinhtrang">Tình trạng:</string>
    <string name="mota">Mô tả sản phẩm:</string>
    <string name="btnLogin">Đăng Nhập</string>
    <string name="btnRegister">Đăng Ký</string>
    <string name="login_lable">Tên đăng nhập</string>
    <string name="password_lable">Mật khẩu</string>
    <string name="title_activity_store_infor">store_infor</string>
    <string name="tab_text_1">Thông tin</string>
    <string name="tab_text_2">Sản Phẩm</string>
    <string name="tab_text_3">Danh mục</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
