<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/maunen"
    tools:context=".Dang_san_pham">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/ImageViewSanPham"
            android:layout_width="126dp"
            android:layout_height="155dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_launcher_background" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_TenSanPham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ImageViewSanPham"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/ImageViewSanPham"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor">

            <EditText
                android:id="@+id/editText_TenSanPham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TextViewTenSanPham"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_Gia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_TenSanPham"
            android:layout_alignLeft="@id/text_TenSanPham"
            android:layout_marginTop="10dp"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor">

            <EditText

                android:id="@+id/editText_Gia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TextViewGia"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_TinhTrang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_Gia"
            android:layout_alignLeft="@id/text_TenSanPham"
            android:layout_marginTop="10dp"
            android:text="@string/TextViewTinhTrang"
            android:textColor="@color/textcolor">



        </TextView>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/text_TinhTrang"
            android:layout_toRightOf="@id/text_TinhTrang"
            android:padding="10dp"
            
            android:thumb="@drawable/drawable_thump"
            android:track="@drawable/drawable_track"></Switch>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/SpnKhuVuc"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/border"
            android:backgroundTintMode="multiply"
            android:entries="@array/SpinnerKhuVuc"
            android:spinnerMode="dropdown"></Spinner>

        <Spinner
            android:id="@+id/SpnDanhMuc"
            android:layout_width="200dp"
            android:layout_height="60sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:backgroundTintMode="multiply"
            android:entries="@array/SpinnerLoai"
            android:spinnerMode="dropdown"></Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/TextViewMoTaSanPham"
            android:textColor="@color/textcolor" />

        <EditText
            android:gravity="top"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:text="@string/ButtonDang"
            android:clickable="true" />
        <Button
            android:layout_marginLeft="20dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:text="@string/ButtonXemLai"
            android:clickable="true"/>
    </LinearLayout>
</LinearLayout>