<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="Đăng nhập"
    android:background="@color/background"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:src="@drawable/welcome" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/login_lable"
            android:inputType="textCapWords"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/password_lable"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="#eeeeee"
            android:text="@string/btnLogin"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Quên mật khẩu?"
            android:textColor="#003399"
            android:textSize="14dp"
            android:layout_marginTop="18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="----hoặc----"
            android:textColor="@color/gray"
            android:textSize="14dp"
            android:layout_marginTop="8dp"/>


        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="#eeeeee"
            android:text="@string/btnRegister"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </LinearLayout>
</LinearLayout>