<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/backgroundapp"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtsdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boder"
                android:ems="10"
                android:hint="@string/hint_sdt"
                android:inputType="number"
                android:padding="20dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boder"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="20dp" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:textColor="@color/textbuttoncolor"
            android:text="@string/buttontieptuc" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Tiếp theo bạn sẽ nhận được mã xác nhận số điện thoại qua SMS" />
    </LinearLayout>
</LinearLayout>